--- a/photographer.html
+++ b/photographer.html
@@ -19,14 +19,14 @@
   <meta property="og:title" content="Fisheye – Photographe professionnel" />
   <meta property="og:description"
     content="Découvrez le portfolio, les œuvres et les informations de nos photographes professionnels. Parcourez leurs galeries et contactez-les pour vos projets photo." />
-  <meta property="og:image" content="https://www.fisheye.com/assets/images/logo.png" />
+  <meta property="og:image" content="https://www.fisheye.com/assets/images/logo.webp" />
   <meta property="og:url" content="https://www.fisheye.com/photographer.html" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Fisheye – Photographe professionnel" />
   <meta name="twitter:description"
     content="Découvrez le portfolio, les œuvres et les informations de nos photographes professionnels. Parcourez leurs galeries et contactez-les pour vos projets photo." />
-  <meta name="twitter:image" content="https://www.fisheye.com/assets/images/logo.png" />
+  <meta name="twitter:image" content="https://www.fisheye.com/assets/images/logo.webp" />
   <title>Fisheye - photographe</title>
 </head>
 
@@ -35,7 +35,7 @@
     <header class="main-header" role="banner">
       <nav aria-label="Navigation principale">
         <a href="./index.html" aria-label="Navigation vers la page d'accueil" tabindex="0">
-          <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+          <img src="assets/images/logo.webp" class="logo" alt="Fisheye Home page" />
         </a>
       </nav>
     </header>
